# SoundCheck

./: .gitignore  AGENTS.md  README.md  pyproject.toml
ai-agent-system/: AI_Agent_Operating_System.md  README.md
ai-agent-system/agent-cards/: 00_project_director.md  01_product_lead.md  02_customer_market_agent.md  03_product_content_agent.md  04_engineering_lead.md  05_audio_engine_agent.md  06_app_qa_agent.md
ai-agent-system/tasks/: decision_log.md  initial_task_queue.md
ai-agent-system/templates/: agent_status_report.md  approval_request.md  daily_report.md  task_card.md
bridge-docs/: AGENTS.md  README.md
bridge-docs/docs/: common-commands.md  operations-faq.md
bridge-docs/docs/agents/: cursor-team.md  gpt-team.md  main.md
docs/plans/: current-plan.md
docs/project/: 12-week-development-plan.md  sample-week-4-report.html  universal-soundcheck-plan.md  week-1-report-template.md  week-1-sample-inventory.md  week-1-sound-criteria.md  week-2-analyzer-handoff.md  week-3-speech-clarity-handoff.md  week-4-report-generation-handoff.md
docs/roadmap/: ai-roadmap.md  current-plan.md  project-roadmap.md  x32-ai-eq-mvp-plan.md
soundcheck/: __init__.py  audio_data.py  cli.py  file_analyzer.py  html_report.py  judgments.py  loaders.py  metrics.py  pdf_report.py  report_scores.py  reports.py  sample_comparison.py  speech_analyzer.py  speech_bands.py
tests/: test_file_analyzer.py  test_html_report.py  test_pdf_report.py  test_report_scores.py  test_reports.py  test_sample_comparison.py  test_speech_analyzer.py
